--- a/source/css/style.css
+++ b/source/css/style.css
@@ -73,600 +73,234 @@ h1, h2, h3, h4, h5, h6 {
 
 /*--------------------*/
 .container {
-  max-width: 1270px;
+  max-width: 1450px;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 15px;
 }
 
-.title {
-  color: #2f281e;
-}
-
-.svg-logo {
-  width: 230px;
+body {
+  font-family: "Montserrat", sans-serif;
 }
 
 .header {
-  background-color: #FAFAF9;
+  background-color: #F4F4F4;
+  height: 100px;
+  margin-bottom: 35px;
 }
 .header__inner {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  height: 100px;
+  height: 155px;
+  padding-top: 20px;
 }
-.header__menu {
-  margin-left: auto;
-}
-.header__menu-list {
-  display: flex;
-}
-.header__menu-btn {
-  margin-right: 24px;
-  font-size: 18px;
-  color: #2f281e;
-}
-.header__btn-in {
-  color: #173a56;
-  margin-left: 30px;
-  font-size: 22px;
+.header__logo {
+  font-size: 56px;
+  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   font-weight: 600;
-  padding: 6px 15px;
-  border: 1px solid #bcd035;
-  border-radius: 4px;
 }
-.header__btn-reg {
-  color: #fff;
-  font-size: 22px;
-  font-weight: 600;
-  padding: 6px 15px;
-  border: 1px solid #ff9900;
-  border-radius: 4px;
-  background-color: #ff9900;
-  margin-left: 10px;
-}
-
-body {
-  font-family: "Poppins", sans-serif;
-  color: #544837;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 26px;
-}
-
-.top {
-  margin: 100px 0;
-}
-.top__title {
-  font-weight: bold;
-  font-size: 48px;
-  line-height: 60px;
-  margin-bottom: 30px;
-  max-width: 420px;
-}
-.top__text {
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 32px;
-  margin-bottom: 45px;
-  max-width: 380px;
-}
-.top__btn {
-  display: inline-block;
-  font-weight: 600;
-  background-color: #ff9900;
-  border-radius: 4px;
-  padding: 5px 23px;
-  margin-right: 15px;
-  font-size: 22px;
-}
-.top__link {
-  color: #ff9900;
-  text-decoration: underline;
-  padding-left: 23px;
+.header__search {
+  margin-right: -40px;
   position: relative;
-  font-size: 20px;
 }
-.top__link:before {
-  content: "";
+.header__search-icon {
   position: absolute;
-  left: 0;
-  background-image: url(../../img/play-icon.svg);
-  width: 17px;
-  height: 19px;
-  top: 2px;
-}
-.top__inner {
-  background-image: url(../../img/bg-icon.svg);
-  background-repeat: no-repeat;
-  padding: 133px 0 100px;
-  background-position: right;
-}
-
-.tools {
-  padding-top: 110px;
-}
-.tools__title {
-  text-align: center;
-  max-width: 540px;
-  margin: 0 auto 45px;
-  padding: 0 15px;
-  font-size: 36px;
-  line-height: 54px;
-  font-weight: 700;
-}
-.tools__items {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 60px;
-  padding: 8px 16px 0;
-}
-.tools__item {
-  width: 240px;
-}
-.tools__item-img {
-  margin-bottom: 30px;
-}
-.tools__item-title {
-  font-weight: 600;
-  margin-bottom: 13px;
-  font-size: 22px;
-  line-height: 33px;
-}
-.tools__item-text {
-  margin-right: 20px;
-}
-.tools__link {
-  margin: 0 auto;
-  display: block;
-  text-align: center;
-  align-items: center;
-  background-color: #ff9900;
-  padding: 15px 32px 14px;
-  border-radius: 4px;
-  font-weight: 700;
-  line-height: 24px;
-  color: #fff;
-  width: 172px;
-}
-.tools__inner {
-  padding-bottom: 200px;
-  background-image: url(../../img/tools-bg.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.direction {
-  margin-bottom: 100px;
-  margin-left: 15px;
-}
-.direction__item {
-  display: flex;
-  justify-content: space-between;
-}
-.direction__item-content {
-  max-width: 486px;
-}
-.direction__pretitle {
-  font-size: 16px;
-  line-height: 24px;
-  margin-bottom: 18px;
-  margin-top: 30px;
-}
-.direction__title {
-  font-size: 36px;
-  font-weight: 600;
-  margin-bottom: 35px;
-  line-height: 54px;
-}
-.direction__text {
-  font-size: 16px;
-  line-height: 26px;
-  margin-bottom: 26px;
-}
-.direction__subtitle {
-  font-weight: 600;
-}
-.direction__img-left {
-  margin-bottom: 70px;
-}
-.direction__list-items {
-  padding-left: 15px;
-  max-width: 365px;
-  position: relative;
-}
-.direction__list-icon {
+  right: 30px;
+  top: 10px;
   width: 35px;
   height: 35px;
 }
-.direction__list-inner {
-  display: flex;
-  align-items: center;
+.header__search-text {
+  width: 850px;
+  height: 60px;
+  border-radius: 50px;
+  border: 1px solid #C2C2C2;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+}
+.header__btn-group {
+  padding-top: 14px;
+}
+.header__cart {
+  padding-right: 20px;
+}
+.header__cart-icon {
+  width: 32px;
+  height: 32px;
+}
+.header__profile-icon {
+  width: 32px;
+  height: 32px;
 }
 
-.ad {
-  text-align: center;
-  align-items: center;
-  margin: 0 auto;
-}
-.ad__title {
-  line-height: 54px;
-  font-size: 36px;
-  font-weight: 600;
-  padding-bottom: 35px;
-}
-.ad__text {
-  margin: 0 auto;
-  max-width: 542px;
-  color: #567592;
-  line-height: 26px;
-  font-size: 16px;
-  margin-bottom: 50px;
-}
-.ad__btn {
-  color: #fff;
-  font-size: 16px;
-  line-height: 24px;
-  background-color: #FF9900;
-  padding: 15px 30px 14px;
-  border-radius: 4px;
-}
-.ad__inner {
-  background-image: url(../../img/ad-bg.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-top: 230px;
-  padding-bottom: 380px;
-}
-
-.team {
-  background-image: url(../../img/team-bg.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top center;
-}
-.team__inner {
-  padding-top: 230px;
-  padding-bottom: 380px;
-  position: relative;
-}
-.team__item {
-  width: 98px;
-  height: 98px;
-  position: absolute;
-  right: 95px;
-  top: 157px;
-}
-.team__item-text {
-  background-color: #fff;
-  padding: 14px 20px 15px;
-  color: #2F281E;
-  border-radius: 26.5px;
-  box-shadow: 0px 2px 15px rgba(23, 58, 86, 0.1);
-  text-align: center;
-  position: absolute;
-  right: 95px;
-  top: -30px;
-  white-space: nowrap;
-}
-.team__box {
-  text-align: center;
-  max-width: 542px;
-  margin: 0 auto;
-}
-.team__title {
-  line-height: 54px;
-  font-size: 36px;
-  font-weight: 700;
-  padding-bottom: 22px;
-}
-.team__text {
-  margin-bottom: 45px;
-  color: #567592;
-  font-size: 16px;
-}
-.team__btn {
-  margin-bottom: 22px;
-  color: #fff;
-  font-size: 16px;
-  line-height: 24px;
-  background-color: #FF9900;
-  padding: 15px 30px 14px;
-  border-radius: 4px;
-}
-
-.blog {
-  padding: 30px 0 125px;
-}
-.blog__title {
-  font-weight: 600;
-  margin-bottom: 9px;
-  font-style: 70px;
-  font-size: 34px;
-  line-height: 51px;
-}
-.blog__text {
-  margin-bottom: 55px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 26px;
-}
-
-.slider {
-  margin: 0 -20px;
-}
-.slider__item {
-  padding: 0 20px;
-}
-.slider__item-img {
-  width: 348px;
-  height: 185px;
-  object-fit: cover;
-  border-radius: 8px;
-  margin-bottom: 25px;
-}
-.slider__item-info {
-  line-height: 28px;
-  margin-bottom: 12px;
-}
-.slider__item-author {
-  font-weight: 700;
-  color: #567592;
-}
-.slider__item-title {
-  font-size: 24px;
-  line-height: 34px;
-  font-weight: 700;
-  transition: all 0.3s;
-  margin-bottom: 84px;
-  display: inline-block;
-}
-.slider__item-title:hover {
-  color: #ff9900;
-}
-
-.slick-dots {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-}
-
-.slick-dots button {
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  font-size: 0;
-  background-color: #efefef;
-  padding: 0;
-  margin: 0 5px;
-}
-
-.slick-dots .slick-active button {
-  background-color: #FF9900;
-}
-
-.footer__inner {
-  padding: 105px 0 100px;
-  border-top: 1px solid rgba(188, 208, 229, 0.496913);
+.shop__breadcrumb {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 80px;
+}
+.active {
+  text-transform: uppercase;
+}
+
+.btn {
+  background-color: white;
+  color: black;
+  border: none;
+}
+
+.btn:hover {
+  background-color: white;
+  color: black;
+  border: none;
+}
+
+.shop__filters {
+  display: flex;
+}
+.shop__filters-text {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 27px;
+  line-height: 33px;
+  padding-right: 30px;
+}
+.btn-filter {
+  border: 1px solid black;
+  margin-right: 15px;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 95px;
+}
+
+.btn-filter:hover {
+  border: 1px solid black;
+  margin-right: 15px;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
+}
+
+.shop__cards {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 95px;
+}
+.shop__card {
+  text-align: center;
+  border: 1px solid #B3B3B3;
+  box-sizing: border-box;
+  width: 420px;
+  height: 605px;
+  border-radius: 15px;
   position: relative;
+  transition: 1s;
 }
-.footer__menu {
-  width: 155px;
+.shop__card:hover {
+  box-shadow: 4px 4px 17px 7px rgba(0, 0, 0, 0.25);
 }
-.footer__menu-title {
-  margin-bottom: 35px;
-  font-size: 20px;
-  line-height: 30px;
-  color: #2f281e;
-  margin-left: 30px;
+.shop__card-img {
+  height: 420px;
+  width: 320px;
+  padding-top: 35px;
+  margin-bottom: 20px;
 }
-.footer__menu-item {
-  margin-left: 30px;
+.shop__card-inner {
+  max-width: 320px;
+  margin: 0 auto;
+  text-align: left;
 }
-.footer__form {
-  width: 330px;
+.shop__card-title {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 27px;
+  line-height: 33px;
+  margin-bottom: 10px;
 }
-.footer__form-text {
+.shop__card-text {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
   margin-bottom: 30px;
-  font-size: 20px;
-  line-height: 30px;
-  color: #2f281e;
-  padding-left: 30px;
+  color: #6F6F6F;
 }
-.footer__form-in {
-  margin-left: 30px;
-  margin-bottom: 21px;
-  padding-left: 15px;
-  height: 48px;
-  width: 100%;
-  display: inline-block;
-  border: 1px solid #BCD0E5;
-  border-radius: 4px;
+.shop__card-price {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 110.7%;
 }
-.footer__form-btn {
-  display: inline-block;
-  margin-left: 30px;
-  background-color: #ff9900;
-  border-radius: 4px;
-  color: #fff;
-  padding: 8px 15px 7px;
-  font-weight: 600;
-  font-size: 16px;
-}
-.footer__menu-link {
-  font-size: 16px;
-  line-height: 35px;
-  color: #544837;
-}
-.footer__form-in:placeholder {
-  color: #bcd0e5;
-  font-size: 16px;
-  line-height: 24px;
-}
-
-.svg-logo-footer {
-  width: 230px;
+.shop__btn {
   position: absolute;
-  top: 80px;
+  right: 45px;
+  bottom: 30px;
+  width: 50px;
+  height: 55px;
+  background-color: #FFFFFF;
+  border: 1px solid #B2B2B2;
+  border-radius: 8px;
+}
+.shop__btn-img {
+  width: 34px;
+  height: 34px;
 }
 
-@media (max-width: 800px) {
-  .container {
-    max-width: 400px;
-  }
+.footer {
+  background-color: #F4F4F4;
+}
+.footer__inner {
+  display: flex;
+  justify-content: space-between;
+  height: 300px;
+  padding-top: 50px;
+}
+.footer__help-title {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+}
+.footer__help-item {
+  font-family: Montserrat;
+  padding-left: 0;
+  font-size: 18px;
+  line-height: 29px;
+}
+.footer__connect-title {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  margin-bottom: 40px;
+}
+.footer__connect-link {
+  padding: 20px;
+  margin-right: 40px;
+}
+.footer__connect-img {
+  width: 50px;
+  height: 50px;
+}
+.footer__partners {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+}
 
-  .svg-logo {
-    display: none;
-    margin: 0px;
-  }
+.shop__card-scroll {
+  margin: 0 auto;
+  height: 420px;
+  width: 320px;
+}
 
-  .direction__list-items {
-    line-height: 31px;
-    margin-bottom: 15px;
-  }
+.carousel-control-next, .carousel-control-prev {
+  width: 30px;
+}
 
-  .direction__list-icon {
-    margin-left: 15px;
-    margin-bottom: 15px;
-  }
-
-  .header {
-    height: 120px;
-  }
-  .header__inner {
-    flex-wrap: wrap;
-    height: auto;
-  }
-  .header__menu {
-    padding: 15px;
-    padding-top: 25px;
-  }
-  .header__menu-btn {
-    margin-right: 10px;
-  }
-  .header__btn-in {
-    margin-left: 12px;
-    min-width: 110px;
-  }
-  .header__btn-reg {
-    margin-right: 6px;
-    min-width: 117px;
-  }
-
-  .top {
-    margin-top: 50px;
-    background-image: url(../../img/tools-bg.svg);
-    background-repeat: no-repeat;
-    background-position: center bottom;
-  }
-  .top__inner {
-    background: none;
-    padding: 0;
-  }
-  .top__title {
-    margin-bottom: 55px;
-  }
-  .top__text {
-    color: #6E6E6E;
-    margin-bottom: 30px;
-    line-height: 40px;
-  }
-  .top__btn {
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 25px;
-  }
-  .top__link {
-    display: block;
-    text-align: center;
-    padding-left: 15px;
-    padding-bottom: 55px;
-  }
-  .top__link:before {
-    content: "";
-    position: absolute;
-    left: 80px;
-    background-image: url(../../img/play-icon.svg);
-    width: 17px;
-    height: 19px;
-    top: 5px;
-  }
-
-  .tools {
-    padding-top: 0;
-  }
-  .tools__title {
-    margin-bottom: 10px;
-    line-height: 50px;
-  }
-  .tools__items {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
-  }
-  .tools__item {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 450px;
-    border: 1px solid #000;
-    border-radius: 4px;
-    margin-bottom: 15px;
-    padding: 10px;
-  }
-  .tools__item-img {
-    margin-bottom: 0;
-  }
-  .tools__item-title {
-    margin-left: 25px;
-    margin-bottom: -3px;
-    margin-left: 16px;
-  }
-  .direction__pretitle {
-    margin-top: 0;
-    margin-bottom: 5px;
-  }
-  .direction__title {
-    line-height: 38px;
-    margin-bottom: 22px;
-  }
-  .direction__img-left {
-    overflow: hidden;
-  }
-
-  .ad {
-    background-image: url(../../img/tools-bg.svg);
-  }
-  .ad__inner {
-    background: none;
-    padding-top: 70px;
-  }
-  .slider__item-img {
-    width: 120px;
-    height: 178px;
-  }
-  .slider__item-title {
-    font-size: 17px;
-    line-height: 28px;
-  }
-
-  .footer__inner {
-    display: grid;
-  }
-  .footer__menu-title {
-    margin-top: 30px;
-    margin-bottom: 10px;
-  }
-  .footer__form-text {
-    margin-top: 30px;
-  }
-  .footer__form-in {
-    width: 90%;
-  }
-  .svg-logo-footer {
-    display: none;
-  }
+.dropdown-menu.show {
+  width: 300px;
+  margin-top: 15px;
 }
