--- a/source/css/style.css
+++ b/source/css/style.css
@@ -115,6 +115,7 @@ body {
   border-radius: 50px;
   border: 1px solid #C2C2C2;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  padding-left: 30px;
 }
 .header__btn-group {
   padding-top: 14px;
